# lite2d

./: .gitignore  .gitmodules  LICENSE  README.md
demo/: README.md
demo/live2d-demo-mao_pro/: mao_pro.moc3.face-parts.json  mao_pro.moc3.parts.json  mao_pro.moc3.render-settings.json
include/: README.md  linker  moc3.face-parts.schema.json  moc3.parts.schema.json  moc3.render-settings.schema.json  moc3.schema.json
lite2d/: .gitignore  CMakeLists.txt  README.md
lite2d-editor/: .gitignore  package-lock.json  package.json
lite2d-editor-ui/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
lite2d-editor-ui/src/lib/demo/: ConsolePanel.svelte  HierarchyPanel.svelte  InspectorPanel.svelte  ProjectPanel.svelte  ScenePanel.svelte
lite2d-editor-ui/src/lib/ui/: layout.ts  store.ts  types.ts
lite2d-editor-ui/src/lib/ui/components/: PanelChrome.svelte  PanelSurface.svelte
lite2d-editor-ui/src/lib/ui/controls/: Button.svelte  Radio.svelte  Select.svelte
lite2d-editor-ui/src/routes/: +layout.svelte  +page.svelte
lite2d-editor-ui/src/routes/demo/: +page.svelte
lite2d-editor/src/lib/moc3/: parse.ts  store.ts
lite2d-editor/src/lib/panels/: ConsolePanel.svelte  HierarchyPanel.svelte  InspectorPanel.svelte  Moc3BodyPartsPanel.svelte  Moc3DrawablesPanel.svelte  Moc3FacePartValidatorPanel.svelte  Moc3FacePartsPanel.svelte  Moc3FilePanel.svelte  Moc3Panel.svelte  Moc3RenderPreviewPanel.svelte  Moc3UvPreviewPanel.svelte  ProjectPanel.svelte  RenderPreview.svelte  ScenePanel.svelte
lite2d-editor/src/routes/: +page.svelte
lite2d/src/: anim_clip.cc  anim_clip.h  debug.h  deformer.h  easing.h  engine.cc  engine.h  expression.h  glmesh.cc  glmesh.h  main.cc  model.h  model_loader.cc  model_loader.h  shader.cc  shader.h  spring.h  texture.cc  texture.h
moc32json/: .gitignore  CMakeLists.txt  README.md
moc32json/src/: csm_allocate.cc  csm_allocate.h  csm_serialize.cc  csm_serialize.h  debug.h  fio.cc  fio.h  main.cc
